--- a/vegadns/api/config/default.ini
+++ b/vegadns/api/config/default.ini
@@ -44,3 +44,9 @@ acl_labels =
 # users that can edit the above sublabels across domains, eg:
 # acl_emails = "user@example.com,user@example.org"
 acl_emails =
+
+[update_notifications]
+enable_redis_notifications = false
+redis_host = 127.0.0.1
+redis_port = 6379
+redis_channel = VEGADNS-CHANGES
