First pass at update push notifications, using redis pub/sub

--- a/vegadns/api/config/default.ini
+++ b/vegadns/api/config/default.ini
@@ -36,3 +36,9 @@ support_email = "support@example.com"
 [ui_server]
 # Used for password reset emails
 ui_url = http://localhost:8080/
+
+[update_notifications]
+enable_redis_notifiations = false
+redis_host = 127.0.0.1
+redis_port = 6379
+redis_channel = VEGADNS-CHANGES
